--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Test-Driven Development Codealong",
   "main": "index.js",
   "scripts": {
+    "start": "react",
     "test": "jest"
   },
   "author": "Flatiron School",
